--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,12 +1,11 @@
 {
-    "name": "Jiggy - Bid for Experiences",
-    "short_name": "J!G",
-    "start_url": "/jig-links/app/",
-    "scope": "/jig-links/app/",
+    "name": "jiggy",
+    "short_name": "jiggy",
+    "start_url": ".",
     "display": "standalone",
-    "background_color": "#000000",
-    "theme_color": "#FA460E",
-    "description": "Bid for exclusive creator experiences",
+    "background_color": "#0175C2",
+    "theme_color": "#0175C2",
+    "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
